<resources>
    <string name="app_name">Choobudo</string>
    <string name="secret_number">6!13569$E4B64!047E@4ACDF1^5A21857$$E526976F566E!841C@@4#362##8DB76#36C!996255E9</string>
    <string name="login">Log in</string>
    <string name="welcome">ברוכים הבאים!</string>
    <string name="connect">התחברות</string>
    <string name="start">בואו נתחיל!</string>
    <string name="user">משתמש</string>
    <string name="password">סיסמה</string>
    <string name="forgot_user">שכחת סיסמה?</string>
    <string name="continue_by">המשך באמצעות</string>
    <string name="select_registration_method">בחר שיטת רישום:</string>
    <string name="contributing_user">משתמש תורם</string>
    <string name="association">עמותה</string>
    <string name="next">הבא</string>
    <string name="you_have_already">יש לך כבר משתמש Choobudo</string>
    <string name="connect_from_here">התחבר מכאן</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="private_name">שם פרטי</string>
    <string name="family_name">שם משפחה</string>
    <string name="selected_association">העמותה שבחרתי</string>
    <string name="didnt_find">לא מצאתי עמותה אנה צרפו את:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mobile">נייד</string>
    <string name="email">אימייל</string>
    <string name="city">עיר</string>
    <string name="country">מדינה</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dateBirth">תאריך לידה</string>
    <string name="description">"מהרגע שתלחצו \"הרשמה\" - תוכלו להמשיך ולרכוש באתרי הקניות שבהסדר* כל רכישה תזכה את העמותה שלכם באחוזים מהעלות הקניה. בכל רגע נתון תוכלו לחזור לאזור האישי. "</string>
    <string name="username">שם משתמש</string>
    <string name="i_red">קראתי והבנתי את</string>
    <string name="term_of_use">תנאי שימוש והתקנה</string>
    <string name="registration">הרשמה</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="type_of_organization">סוג ההתארגנות</string>
    <string name="stage46">האם יש סעיף 46?</string>
    <string name="role">תפקיד</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="association_name">שם ההתארגנות</string>
    <string name="private_name_contact">שם פרטי איש קשר</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="organization_address">כתובת ההתארגנות</string>
    <string name="postal">מיקוד</string>
    <string name="number">מספר</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="account_name">שם החשבון</string>
    <string name="account_num">מספר חשבון</string>
    <string name="branch_name">שם הסניף</string>
    <string name="branch_number">מספר סניף</string>
    <string name="bank_num">מספר בנק</string>
    <string name="passOrder">יש להזין לפחות 8 תווים</string>
    <string name="num_participants">מספר משתמשים</string>
    <string name="personal_link">לינק עמותה אישי</string>
    <string name="descriptionAssociate">מהרגע שתלחצו ״הרשמה״ - תוכלו להמשיך ולרכוש באתרי הקניות שבהסדר*. כל רכישה תזכה את העמותה שלכם באחוזים מהעלות הקניה. בכל רגע נתון תוכלו לחזור לאזור האישי.</string>
    <string name="i_confirm">אני מאשר קבלת עדכונים במייל, SMS, ווצאפ (ניתן לשנות העדפות בעמוד הפרופיל האישי)</string>
    <string name="success_msg">הפעולה הצליחה</string>
    <string name="failed_msg">הפעולה נכשלה</string>
    <string name="who_we_are">מי אנחנו?</string>
    <string name="faq">FAQ</string>
    <string name="profile">פרופיל</string>
    <string name="saved">שמורים</string>
    <string name="stores">חנויות</string>
    <string name="associations">עמותות</string>
    <string name="content" translatable="false">content</string>
    <string name="your_opprtunities" translatable="false">Your opportunities</string>


    <string-array name="type_organization">
        <item>בחר</item>
        <item>עמותה</item>
        <item>חל"צ</item>
        <item>מטרה טובה ללא מסגרת רשמית</item>
        <item>אחר</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_logo">הוסף לוגו עמותה</string>
    <string name="choose_association">בחר עמותה</string>
    <string name="special_for_you">במיוחד בשבילך</string>
    <string name="search_store">חפש חנות …</string>
    <string name="email_pass_error">אימייל או סיסמה שגויים</string>
    <string name="email_already_exist">האימייל קיים במערכת</string>
    <string name="no_website">חסר קישור לאתר אינטרנט</string>
    <string name="user_details">פרטי משתמש</string>
    <string name="gather_donation_details">רכזו את כל התרומות לזכותנו:</string>
    <string name="extent_donation">היקף התרומות שלי:</string>
    <string name="annual">שנתי</string>
    <string name="tillthisday">עד היום</string>
    <string name="quarterly">רבעוני</string>
    <string name="hundred">100</string>
    <string name="type_money">ש\"ח</string>
    <string name="private_details">פרטים אישיים</string>
    <string name="donation_details">פרטי תרומות</string>
    <string name="sum_users">כמות המשתמשים שלי:</string>
    <string name="users">משתמשים</string>
    <string name="i_remembered">נזכרתי</string>
    <string name="reset_password">שחזור סיסמה</string>
    <string name="error">שגיאה</string>
    <string name="response_reset_password">הודעה עם קישור זמני לאיפוס הסיסמה נשלחה לכתובת האימייל שהזנת (אם היא קיימת באתר). אם לא קיבלת את ההודעה - בדוק בספאם, או וודא שכתובת האימייל אכן רשומה באתר.</string>
    <color name="flavour_background_dark">#757575</color>
    <color name="flavour_background_very_dark">#75787C</color>

    <array name="banners_array">
        <item>@drawable/banner1</item>
        <item>@drawable/banner2</item>
        <item>@drawable/banner3</item>
    </array>

    <string-array name="collect_all_donations">
        <item>בחר</item>
        <item>בזיכוי ישיר לעמותה</item>
        <item>חשבון שלנו ב"עיגול לטובה"</item>
        <item>JGIVEחשבון שלנו ב</item>
    </string-array>

</resources>