<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.fragment.RegFirstFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTypeOrganization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_organization"
        android:textColor="@color/grey1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rlTypeOrganization"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />


    <RelativeLayout
        android:id="@+id/rlTypeOrganization"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_field_unfill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTypeOrganization"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.93">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/arrow_down" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spTypeOrganization"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:entries="@array/type_organization"
            />


    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAssociateNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/association_name"
        android:textColor="@color/grey1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rlTypeOrganization"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAssociation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_field_unfill"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAssociateNameTitle"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.93" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMyAssosiationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stage46"
        android:textColor="@color/grey1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rlTypeOrganization"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llTabsContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_tabs_type"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/etAssociation"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.134"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etAssociation"
        app:layout_constraintTop_toBottomOf="@+id/tvMyAssosiationTitle"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.93">
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/unselected_type_bg"
            android:text="@string/yes"
            android:textColor="@color/grey4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:background="@drawable/selected_type_bg_stage46"
            android:text="@string/no"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRoleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role"
        android:textColor="@color/grey1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rlTypeOrganization"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etContactPosition"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_field_unfill"
        android:paddingStart="10dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.134"
        app:layout_constraintStart_toStartOf="@+id/tvRoleTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvRoleTitle"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.93" />

</androidx.constraintlayout.widget.ConstraintLayout>